fix frontend issue

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <body>
     <div class="container">
         <h1>360 Formation: PPTX to CSV Quiz Converter</h1>
-        <p class="subtitle">Simply upload your DOCX file containing multiple-choice questions to <br> seamlessly
+        <p class="subtitle">Simply upload your PPTX file containing multiple-choice questions to <br> seamlessly
 them into a structured 360 quiz format.</p>
         
         <div class="upload-zone" id="uploadZone">
